# Dashing-for-the-Golden-Snitch-Multi-Drone-RL

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: train_default.yaml
config/algs/: ippo.yaml  ppo.yaml
config/algs/pos_rel/: ppo.yaml
config/algs/race_multi_2/: ippo.yaml
config/algs/race_multi_3/: ippo.yaml
config/algs/race_multi_5/: ippo.yaml
config/envs/: hover_race.yaml  kin_2d.yaml  kin_3d.yaml  kin_rel_2d.yaml  kin_rel_3d.yaml  pos_rel.yaml  race_multi_2.yaml  race_multi_3.yaml  race_multi_5.yaml  rot_rel.yaml
config/runners/: hover_race.yaml  kin_2d.yaml  kin_3d.yaml  kin_rel_2d.yaml  kin_rel_3d.yaml  pos_rel.yaml  race_multi_2.yaml  race_multi_3.yaml  race_multi_5.yaml  rot_rel.yaml
config/vis/: Face_moving.yaml  UZH_gate.yaml  star_tracks.yaml  waypoints.yaml  waypoints_multi.yaml  waypoints_multi_5.yaml
demo_model/: Race_multi_2.pt  Race_single.pt
docs/: USER_MANUAL.md
gym_drones/: __init__.py
gym_drones/assets/multi_test_drone/: multi_test_drone.yaml
gym_drones/assets/multi_test_drone_5uav/: multi_test_drone_5uav.yaml
gym_drones/assets/single_test_drone/: single_test_drone.yaml
gym_drones/envs/: DroneBase.py
gym_drones/utils/: Logger.py  RewardCheckCallback.py  enums.py  motion_library.py  utils.py  vis_utils.py
scripts/: eval.py  export_model.py  train.py
tests/: test_SingleDroneAgentBase.py  test_callbacks.py  test_config_processing.py  test_core_utils.py  test_data_handling.py  test_envs.py  test_motion_library.py
(+38 files in other folders)
