[build-system]
requires = ["setuptools", "wheel", "black==24.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gym-drones"
version = "0.2.2"
description = "Simple gym for drones RL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<2.0",
    "scipy>=1.10",
    "matplotlib",
    "pyyaml",
    "pytest",
    "gymnasium",
    "stable-baselines3 == 2.2.1",
    "tensorboard",
    "tqdm",
    "rich",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gym_drones", "gym_drones.*"]

[tool.black]
line-length = 120